--- a/MODAMSWeb/Resources/Areas/Users/Views/Reporting/Index.so.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Reporting/Index.so.resx
@@ -168,7 +168,7 @@
   <data name="ReportCatalog" xml:space="preserve">
     <value>Liiska Warbixinaha</value>
   </data>
-  <data name="SearchReport" xml:space="preserve">
+  <data name="SearchReports" xml:space="preserve">
     <value>Raadi Warbixin</value>
   </data>
   <data name="All" xml:space="preserve">
